refactor: decompose god classes, apply SOLID principles, improve code quality (#11)
* refactor(api): extract ApiPayloadParser from QuarkusApiClient

Separate JSON payload deserialization (extensions, metadata, streams,
presets, OpenAPI build tools) from HTTP transport/retry logic.
QuarkusApiClient now delegates all parsing to ApiPayloadParser,
reducing its responsibility to HTTP orchestration only (SRP).

* refactor(api): extract JsonFieldReader to deduplicate JSON helpers

Consolidate duplicated readString/readInt/readStringList/readObject
helpers from CatalogSnapshotCache, FileBackedExtensionFavoritesStore,
UserPreferencesStore, and ForgeRecipeLockStore into a single reusable
JsonFieldReader utility class (DRY).

* fix: trim whitespace in ForgeRecordValues.normalize()

Align with every other normalizer in the project which trims input.
Without this, whitespace-padded values in recipe/lock files could
propagate untrimmed into ProjectRequest fields.

* refactor(domain): use isEmpty() instead of length() > 0 in CliPrefillMapper

* fix(diagnostics): guard against null message in DiagnosticLogger fallback

IOException.getMessage() can return null, causing NPE in the
diagnostic fallback JSON output path.

* refactor(ui): inline trivial key matcher delegate methods in CoreTuiController

Remove 18 private static methods that were pure one-line forwards to
AppKeyActions or single-expression matchers. Call sites now reference
AppKeyActions directly, reducing CoreTuiController by ~50 lines.

* refactor(ui): extract OverlayRenderer from CoreTuiController

Move all overlay rendering logic (command palette, help, generation
progress, post-generation menu, startup splash, GitHub visibility)
into a dedicated OverlayRenderer class. Each method is pure rendering
with no state mutation, taking only the data it needs as parameters.

Also inline trivial AppKeyActions delegate wrappers and remove unused
imports (LineGauge, BorderType). CoreTuiController reduced from
2710 to 2490 lines.