@@ -2,51 +2,74 @@
 
 Quarkus Forge is a keyboard-first terminal UI (TUI) and headless CLI for generating and scaffolding Quarkus projects. It acts as a fast, offline-capable alternative to `quarkus create`, deeply integrated with `code.quarkus.io`'s remote metadata but built for terminal power users.
 
-It is designed for rapid iteration, leveraging asynchronous background loads, deterministic project state modeling, and safe archive extraction.
-
 ## Why use Quarkus Forge?
 
-- **Keyboard-First TUI:** Zero-mouse, Vim-like bindings for navigating catalogs, toggling extensions, and validating inputs.
+- **Keyboard-First TUI:** Zero-mouse, Vim-like bindings for navigating catalogs, toggling extensions, and validating inputs. Inline validation hints, search match counts, and animated progress feedback.
 - **Speed & Caching:** Background loading and local snapshot caching mean you don't wait for the network to start configuring your project.
 - **Headless & CI-Ready:** Powerful non-interactive modes for generating applications identically across local environments and CI pipelines.
-- **Deterministic State:** Supports `Forgefile` and `forge.lock` for exact reproduction of generated applications, much like standard dependency managers.
+- **Deterministic State:** Supports `Forgefile` with an optional `locked` section for exact reproduction of generated applications, much like standard dependency managers.
+- **Customizable:** Theming via `.tcss` files, configurable IDE command via `QUARKUS_FORGE_IDE_COMMAND`, post-generation hooks.
 - **Workflow Enhancers:** Post-generation handoffs allow you to drop straight into VS Code, an interactive shell, or automatically publish to GitHub.
 
-## Architecture Highlights
+## Architecture
 
-The codebase separates pure domain logic from UI side-effects, making it highly testable. 
+The codebase is organized into focused modules that follow SOLID principles and separate concerns cleanly.
+
+### API Layer (`api/`)
+- **`QuarkusApiClient`** — Async HTTP client with retry/backoff, implements `AutoCloseable` for resource safety. Responsible only for transport orchestration.
+- **`ApiPayloadParser`** — Stateless JSON deserialization for all API payloads (extensions, metadata, streams, presets, OpenAPI).
+- **`JsonFieldReader`** — Shared JSON field reading helpers used across all store and parser classes (DRY).
+- **`CatalogSnapshotCache`** — Local catalog snapshot persistence and freshness management.
+
+### Domain Layer (`domain/`)
+- **`ProjectRequest`** / **`ProjectRequestValidator`** — Immutable project configuration with validation rules.
+- **`MetadataCompatibilityContext`** — Enforces metadata-driven compatibility constraints (build tool ↔ Java version).
+- **`CliPrefillMapper`** — Maps CLI options to validated project requests.
+
+### UI Layer (`ui/`)
+- **`CoreTuiController`** — Central TUI state machine managing focus, input, and generation flow.
+- **`OverlayRenderer`** — Stateless overlay rendering (command palette, help, progress, post-generation menus).
+- **`MetadataSelectorManager`** — Metadata selector state (platform stream, build tool, Java version cycling and label generation).
+- **`UiTextConstants`** — UI text content (help lines, splash art, action labels).
+- **`ExtensionCatalogState`** — Extension catalog search, filtering, favorites, presets, and category navigation.
+- **`BodyPanelRenderer`** / **`FooterLinesComposer`** — Layout rendering helpers.
+
+### CLI Layer (root package)
+- **`QuarkusForgeCli`** — Picocli command entry point, TUI bootstrap, and runtime configuration.
+- **`HeadlessGenerationService`** — Decoupled headless generation engine for CI/scripting, with `AsyncFailureHandler` for consistent error handling.
+- **`PostTuiActionExecutor`** — Post-generation shell actions (IDE open, GitHub publish, terminal handoff).
+- **`ForgefileStore`** — Forgefile persistence (with optional locked section).
+
+### Archive Layer (`archive/`)
+- **`SafeZipExtractor`** — Hardened ZIP extraction with Zip-Bomb and Zip-Slip protections.
+- **`ProjectArchiveService`** — Orchestrates download, extraction, and progress reporting.
+
 For a complete overview of the internal design, see the [Architecture & Internals](docs/modules/ROOT/pages/architecture.adoc) documentation.
-
-Key components include:
-* `CoreTuiController` - Strict state machine managing TUI inputs and rendering signals.
-* `QuarkusApiClient` - Async client fetching extension metadata and binary ZIP payloads.
-* `SafeZipExtractor` - Hardened utility protecting against Zip-Bomb and path-traversal (Zip-Slip) attacks during extraction.
-* `HeadlessGenerationService` - Decoupled headless generation engine.
 
 ## Requirements
 
-- Java 25 (built entirely on the newest LTS features)
+- Java 25
 - Maven 3.9+
 
 ## Build
 
 ```bash
-mvn -q -DskipTests package
+mvn clean package -DskipTests
 ```
 
-Jar output: `target/quarkus-forge.jar`
+Output: `target/quarkus-forge.jar`
 
-## Quick Start (Usage)
+## Quick Start
 
-### 1. Interactive TUI
-The primary mode of operation. Launch the interactive TUI:
+### Interactive TUI
 ```bash
-java -jar target/quarkus-forge.jar
+java --enable-native-access=ALL-UNNAMED -jar target/quarkus-forge.jar
 ```
-*Tip: In the TUI, hit `?` for help, `Ctrl+P` for the command palette, or `/` to jump to extension search.*
+> **Note:** The `--enable-native-access=ALL-UNNAMED` flag suppresses Panama FFM warnings from the TamboUI terminal backend.
 
-### 2. Headless Generate
-Perfect for scripts and automation:
+Hit `?` for help, `Ctrl+P` for the command palette, or `/` to jump to extension search.
+
+### Headless Generate
 ```bash
 java -jar target/quarkus-forge.jar generate \
   --group-id org.acme \
@@ -55,66 +78,84 @@ java -jar target/quarkus-forge.jar generate \
   --java-version 25
 ```
 
-### 3. Quick Prototyping (Dry-Run & Hooks)
-To check what would be generated without writing to disk:
+### Dry-Run
 ```bash
 java -jar target/quarkus-forge.jar generate --dry-run
 ```
 
-To run a shell script automatically after the project is generated (e.g., initial git commit):
+### Post-Generation Hooks
 ```bash
-java -jar target/quarkus-forge.jar --post-generate-hook="git init && git add . && git commit -m 'Initial commit'"
+java -jar target/quarkus-forge.jar \
+  --post-generate-hook="git init && git add . && git commit -m 'Initial commit'"
 ```
 
-### 4. Deterministic Replay (Recipes)
-Generate an identical project using a recipe and a lock file:
+### Deterministic Replay
 ```bash
-java -jar target/quarkus-forge.jar generate --recipe Forgefile --lock forge.lock
+# Generate from a Forgefile template
+java -jar target/quarkus-forge.jar generate --from Forgefile
+
+# Generate and write/update the locked section
+java -jar target/quarkus-forge.jar generate --from Forgefile --lock
+
+# Verify no drift against locked section
+java -jar target/quarkus-forge.jar generate --from Forgefile --lock-check --dry-run
+
+# Save current configuration as a shareable template
+java -jar target/quarkus-forge.jar generate --save-as my-template.json --lock \
+  --group-id com.acme --artifact-id my-service -e io.quarkus:quarkus-rest
 ```
 
-Refresh the lock after intentional recipe changes:
+## Customization
+
+### Theming
+Create a `.tcss` file with semantic color tokens:
+```properties
+# my-theme.tcss
+base = #1e1e2e
+text = #cdd6f4
+accent = #f38ba8
+focus = #89b4fa
+muted = #6c7086
+```
+Apply via environment variable or system property:
 ```bash
-java -jar target/quarkus-forge.jar generate \
-  --recipe Forgefile \
-  --lock forge.lock \
-  --refresh-lock \
-  --dry-run
+export QUARKUS_FORGE_THEME=/path/to/my-theme.tcss
+# or
+java -Dquarkus.forge.theme=/path/to/my-theme.tcss -jar target/quarkus-forge.jar
+```
+
+### IDE Command
+The "Open in IDE" post-generation action defaults to `code .` (VS Code). Override via:
+```bash
+export QUARKUS_FORGE_IDE_COMMAND="idea ."        # IntelliJ
+export QUARKUS_FORGE_IDE_COMMAND="nvim ."        # Neovim
+export QUARKUS_FORGE_IDE_COMMAND="cursor ."      # Cursor
 ```
 
 ## Where Files Live
 
-Quarkus Forge uses two storage scopes:
-
 - **Machine-local app state:** `~/.quarkus-forge/`
-  - `catalog-snapshot.json` (catalog cache/snapshot)
-  - `preferences.json` (user preferences)
-  - `favorites.json` (favorite extensions)
-  - `recipes/` (reusable Forge recipes)
-- **Project/workflow files:** usually `forge.lock`, and optionally project-local `Forgefile`
-  - Keep lock files with the repository/workflow for strict reproducibility in CI.
-  - Reusable templates can live in `~/.quarkus-forge/recipes/` and be referenced by name.
+  - `catalog-snapshot.json` — catalog cache/snapshot
+  - `preferences.json` — user preferences
+  - `favorites.json` — favorite extensions
+  - `recipes/` — reusable Forge recipes
+- **Project/workflow files:**
+  - `Forgefile` — shareable project template with optional `locked` section for CI reproducibility
 
-Recipe path UX:
+Forgefile path resolution:
+- `--from <name>`: uses local file if found; otherwise resolves `~/.quarkus-forge/recipes/<name>`.
+- `--save-as <name>`: writes to `~/.quarkus-forge/recipes/<name>` when `<name>` is just a filename.
 
-- `--recipe <name>`: uses local file if found; otherwise resolves `~/.quarkus-forge/recipes/<name>`.
-- `--write-recipe <name>`: writes to `~/.quarkus-forge/recipes/<name>` when `<name>` is just a filename.
-- Use `./Forgefile` when you explicitly want a project-local file path.
+## Verification
 
-## Verification Loop (For Contributors)
-
-Before submitting changes, run:
 ```bash
-mvn -q spotless:check
-mvn -q checkstyle:check
-mvn -q test
-npm ci --prefix site
-npm run docs:build --prefix site
-npm run docs:linkcheck --prefix site
+mvn clean verify
 ```
+
+Runs all unit and integration tests.
 
 ## Docs
 
 - Antora docs source: `docs/`
 - Site build scripts: `site/`
 - Local docs guide: `site/README.md`
-- Forge files/state reference: `docs/modules/ROOT/pages/reference/forge-files-and-state.adoc`
